--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,18 +4,25 @@
     "es2021": true
   },
   "extends": [
+    "airbnb",
+    "airbnb/hooks",
     "eslint:recommended",
     "plugin:react/recommended",
     "plugin:prettier/recommended"
   ],
   "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
+    "ecmaVersion": 12,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
-  "plugins": ["react", "prettier"],
+  "plugins": ["react", "react-hooks", "prettier"],
   "rules": {
     "prettier/prettier": ["error"],
     "react/react-in-jsx-scope": "off",
-    "semi": "off"
+    "react/forbid-prop-types": "off",
+    "semi": "off",
+    "no-console": "off"
   }
 }
